--- a/styles.css
+++ b/styles.css
@@ -440,7 +440,7 @@ header .container {
 }
 
 .slider-item:nth-child(1) {
-    background-image: url('https://images.unsplash.com/photo-1615239230891-c3b133622f9e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80');
+    background-image: url('https://sustentavel.com.br/wp-content/uploads/2020/01/Reflorestamento-1.jpg');
 }
 
 .slider-item:nth-child(2) {
