--- a/styles.css
+++ b/styles.css
@@ -318,7 +318,7 @@ header .container {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1621435429252-8104866b6f7a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80');
+    background-image: url('https://image.chitra.live/api/v1/wps/759b3f0/fbe291c8-1efb-4dd4-9a9d-824b6868c640/4/Min-rio-de-ferro-empilhado-1074x654.jpg');
     background-size: cover;
     background-position: center;
     transition: transform 0.5s ease;
